--- a/libft/Makefile
+++ b/libft/Makefile
@@ -14,3 +14,38 @@ fclean: clean
 		/bin/rm -f $(NAME)
 
 re: fclean all
+
+
+
+
+
+NAME = libft.a
+HEADER = libft.h
+CFLAGS = -Wall -Wextra -Werror
+CC = gcc
+AR = ar rc
+RM = rm -f
+
+BSRCS = $(wildcard *lst*.c)
+SRCS = $(filter-out $(BSRCS), $(wildcard *.c))
+OBJS = $(SRCS:.c=.o)
+BOBJS = $(BSRCS:.c=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJS)
+	$(AR) $@ $^
+
+bonus: $(BOBJS) $(OBJS)
+	$(AR) $(NAME) $^
+
+%.o: %.c $(HEADER)
+	$(CC) $(CFLAGS) -c $< -o $@
+
+clean:
+	$(RM) $(OBJS) $(BOBJS)
+
+fclean: clean
+	$(RM) $(NAME)
+
+re: fclean all
