libft_mod_final2

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,5 +1,17 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: marvin <marvin@student.42.fr>              +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/05/19 12:50:42 by marvin            #+#    #+#              #
+#    Updated: 2021/05/19 12:50:42 by marvin           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = libftprintf.a
-HEADER = 
+HEADER = ft_printf.h
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 AR = ar rc
