--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: snam <snam@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/14 20:25:46 by marvin            #+#    #+#              #
-#    Updated: 2021/05/20 23:19:02 by snam             ###   ########.fr        #
+#    Updated: 2021/05/21 12:41:44 by snam             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,18 +30,19 @@ OBJS = $(SRCS:.c=.o)
 BOBJS = $(BSRCS:.c=.o)
 
 ifdef FLAG_BONUS
-OBJECT_FILES = $(OBJS) $(BOBJS)
-else
-OBJECT_FILES = $(OBJS)
+OBJS += $(BOBJS)
 endif
 
 all: $(NAME)
 
-$(NAME): $(OBJECT_FILES)
-	$(AR) $(NAME) $(OBJECT_FILES)
+bonus:
+	sleep 1
+	FLAG_BONUS=1 
+	make all
 
-bonus: 
-	FLAG_BONUS=1 make all
+$(NAME): $(OBJS)
+	$(AR) $(NAME) $(OBJS)
+
 
 %.o: %.c $(HEADER)
 	$(CC) $(CFLAGS) -c  $< -o $@
