--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: snam <snam@student.42.fr>                  +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/06/10 23:03:28 by snam              #+#    #+#              #
+#    Updated: 2021/06/11 08:37:58 by snam             ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = libftprintf.a
 HEADER = ft_printf.h
 CC = gcc
@@ -5,8 +17,17 @@ CFLAGS = -Wall -Wextra -Werror
 AR = ar rc
 RM = rm -f
 
-SRCS = ft_printf.c utils.c process_tocken.c\
-		create_string_others.c create_string_num.c
+SRCS = ft_printf.c \
+utils.c \
+utils2.c \
+utils3.c \
+state_machine.c \
+process_tocken.c\
+create_xX.c \
+create_u.c \
+create_s.c \
+create_di.c \
+create_cppc.c
 
 OBJS = $(SRCS:.c=.o)
 
