--- a/02 push_swap/Makefile
+++ b/02 push_swap/Makefile
@@ -7,3 +7,25 @@ CFLAGS = -Wall -Wextra -Werror
 RM = rm -f
 
 HEADERS_DIRECTORY = ./inc/
+
+SRCS = 
+
+OBJS = $(SRCS:.c=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJS)
+	$(AR) $(NAME) $(OBJS)
+
+%.o: %.c $(HEADER)
+	$(CC) $(CFLAGS) -c  $< -o $@
+
+clean:
+	$(RM) $(OBJS)
+
+fclean: clean
+	$(RM) $(NAME)
+
+re: fclean all
+
+.PHONY: all bonus clean fclean re
