--- a/02 push_swap/.vscode/settings.json
+++ b/02 push_swap/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
 	"files.associations": {
 		"push_swap.h": "c",
-		"__node_handle": "c"
+		"__node_handle": "c",
+		"stdarg.h": "c",
+		"sstream": "c",
+		"ratio": "c"
 	}
 }
