[push_swap] optimization

--- a/02 push_swap/Makefile
+++ b/02 push_swap/Makefile
@@ -21,6 +21,7 @@ SRCS = ./scrs/a_to_b.c\
 		./scrs/quick_sort.c\
 		./scrs/sort_under_six.c\
 		./scrs/terminate.c\
+		./scrs/is_ft.c\
 
 OBJS = $(SRCS:.c=.o)
 
