--- a/00 libft/Makefile
+++ b/00 libft/Makefile
@@ -17,11 +17,41 @@ CFLAGS = -Wall -Wextra -Werror
 AR = ar rc
 RM = rm -f
 
-SRCS = ft_strchr.c ft_atoi.c ft_strdup.c ft_bzero.c ft_strjoin.c ft_calloc.c ft_strlcat.c \
-ft_isalnum.c ft_memccpy.c ft_strlcpy.c ft_isalpha.c ft_memchr.c ft_strlen.c ft_isascii.c \
-ft_memcmp.c ft_strncmp.c ft_isdigit.c ft_memcpy.c ft_strnstr.c ft_isprint.c ft_memmove.c \
-ft_strrchr.c ft_itoa.c	ft_memset.c	ft_strtrim.c ft_putchar_fd.c ft_substr.c \
-ft_putendl_fd.c ft_tolower.c ft_putnbr_fd.c ft_toupper.c ft_putstr_fd.c ft_split.c ft_strmapi.c
+SRCS = ft_strchr.c \
+		ft_atoi.c \
+		ft_strdup.c \
+		ft_bzero.c \
+		ft_strjoin.c \
+		ft_calloc.c \
+		ft_strlcat.c \
+		ft_isalnum.c \
+		ft_memccpy.c \
+		ft_strlcpy.c \
+		ft_isalpha.c \
+		ft_memchr.c \
+		ft_strlen.c \
+		ft_isascii.c \
+		ft_memcmp.c \
+		ft_strncmp.c \
+		ft_isdigit.c \
+		ft_memcpy.c \
+		ft_strnstr.c \
+		ft_isprint.c \
+		ft_memmove.c \
+		ft_strrchr.c \
+		ft_itoa.c	\
+		ft_memset.c	\
+		ft_strtrim.c \
+		ft_putchar_fd.c \
+		ft_substr.c \
+		ft_putendl_fd.c \
+		ft_tolower.c \
+		ft_putnbr_fd.c \
+		ft_toupper.c \
+		ft_putstr_fd.c \
+		ft_split.c \
+		ft_strcmp.c \
+		ft_strmapi.c
 
 BSRCS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c \
 ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c 
