--- a/02 minitalk/Makefile
+++ b/02 minitalk/Makefile
@@ -1,10 +1,13 @@
 SERVER		=	server
 CLIENT		=	client
 
+BSERVER		=	server_bonus
+BCLIENT		=	client_bonus
+
 CC			=	gcc
-# CFLAGS		=	-Wall -Wextra -Werror
-#CFLAGS		=	-g -fsanitize=address
-CFLAGS		=	-g
+CFLAGS		=	-Wall -Wextra -Werror
+# CFLAGS		=	-g -fsanitize=address
+# CFLAGS		=	-g
 
 AR			=	ar
 ARFLAGS		=	-rcs
@@ -28,20 +31,27 @@ LIBS		=	$(addprefix $(LIB_DIR), $(LIB_NAME))
 HEADERS_DIR	=	./inc/
 
 # SOURCES
-SERVER_SCRS	=	./srcs/server.c\
-				# ./inc/function.c
-
-CLIENT_SCRS	=	./srcs/client.c\
-				# ./inc/function.c
+SERVER_SCRS	=	./srcs/server.c
+CLIENT_SCRS	=	./srcs/client.c
 
 # OBJECTS
 SERVER_OBJS	=	$(SERVER_SCRS:.c=.o)
 CLIENT_OBJS	=	$(CLIENT_SCRS:.c=.o)
 
+# BSOURCES
+BSERVER_SCRS	=	./srcs/server_bonus.c\
+				# ./inc/function.c
+BCLIENT_SCRS	=	./srcs/client_bonus.c\
+				# ./inc/function.c
+
+# BOBJECTS
+BSERVER_OBJS	=	$(BSERVER_SCRS:.c=.o)
+BCLIENT_OBJS	=	$(BCLIENT_SCRS:.c=.o)
+
 
 all : $(LIB_NAME) $(SERVER) $(CLIENT)
 
-bonus : $(LIB_NAME)
+bonus : $(LIB_NAME) $(BSERVER) $(BCLIENT)
 
 $(LIB_NAME) : 
 	@make -C $(LIB_DIR)
@@ -55,13 +65,21 @@ $(CLIENT) : $(CLIENT_SCRS) $(LIBS)
 	$(CC) $(CFLAGS) $^ -o $@ -I $(HEADERS_DIR)
 	@printf "${FG_GREEN}Client make all succeeded!\n${NO_COLOR}"
 
+$(BSERVER) : $(BSERVER_SCRS) $(LIBS)
+	$(CC) $(CFLAGS) $^ -o $@ -I $(HEADERS_DIR)
+	@printf "${FG_GREEN}server_bonus make all succeeded!\n${NO_COLOR}"
+
+$(BCLIENT) : $(BCLIENT_SCRS) $(LIBS)
+	$(CC) $(CFLAGS) $^ -o $@ -I $(HEADERS_DIR)
+	@printf "${FG_GREEN}client_bonus make all succeeded!\n${NO_COLOR}"
+
 clean :
 	make clean -C $(LIB_DIR)
-	$(RM) $(SERVER_OBJS) $(CLIENT_OBJS)
+	$(RM) $(SERVER_OBJS) $(CLIENT_OBJS) $(BSERVER_OBJS) $(BCLIENT_OBJS)
 
 fclean : clean
 	make fclean -C $(LIB_DIR)
-	$(RM) $(SERVER) $(CLIENT)
+	$(RM) $(SERVER) $(CLIENT) $(BSERVER) $(BCLIENT)
 
 re : fclean all
 
